promo updates; removed sponsors, music and toh from last year

--- a/src/assets/css/_images.scss
+++ b/src/assets/css/_images.scss
@@ -9,3 +9,9 @@
     background-size: cover;
     background-position: center center;
 }
+
+.image--iris-2018 {
+    background-image: url(/assets/img/2018/iris.jpg);
+    background-size: cover;
+    background-position: center;
+}
