--- a/src/html/events/kidzone/index.jade
+++ b/src/html/events/kidzone/index.jade
@@ -7,7 +7,7 @@ block contents
 
     mixin secondaryNav(globals.events.nav, "kids' zone")
 
-    mixin presentingSponsor("/assets/img/2017/sponsors/presenting-sponsors/publix.png", "Publix")
+    //- mixin presentingSponsor("/assets/img/2017/sponsors/presenting-sponsors/publix.png", "Publix")
 
     .u-container
     
