--- a/src/html/index.jade
+++ b/src/html/index.jade
@@ -9,7 +9,7 @@ block title
 block contents
 
     div.Banner-dates
-        div Tour of Homes Preview: Friday #{globals.ipf.date.friday.date}
+        div #{globals.ipf.date.year} Tour of Homes Preview: Friday #{globals.ipf.date.friday.date}
         div Festival: Saturday #{globals.ipf.date.saturday.date} &amp; Sunday #{globals.ipf.date.sunday.date}
 
     .Hero.owl-carousel.owl-theme
@@ -50,17 +50,15 @@ block contents
             .PageIntro-copy
                 p During the last full weekend in April each year, Inman Park proudly presents a neighborhood festival widely regarded as Atlanta&rsquo;s most spirited and eclectic.
                 p Please join us for the #{globals.ipf.date.annual}th Inman Park Spring Festival and Tour Of Homes.
+                p The #{globals.ipf.date.year} Inman Park Festival takes place on Saturday #{globals.ipf.date.saturday.date} &amp; Sunday #{globals.ipf.date.sunday.date} with a Tour of Homes preview on Friday #{globals.ipf.date.friday.date}.
 
     .PromotionItemHero.u-container.u-container--noPad
-        .PromotionItemHero-image.image--art-2017
+        .PromotionItemHero-image.image--iris-2018
 
         .PromotionItemHero-text
             section
-                h2 Artwork Chosen
-                p 
-                    a(href="/art/2017/") Read the interview with local artist Mindy Phan.
-            .ArrowNav
-                a(href="/art/2017/") >
+                h2 Spring is Coming!
+                p It may be cold outside but spring is on its way. Check back soon for more details on this year's festival.
 
     ul.PromotionGrid.u-container.u-container--noPad
         li.PromotionItem.alt-primary
@@ -81,9 +79,8 @@ block contents
         //-
         li.PromotionItem
             section
-                h3 Thanks for Joining Us!
-                
-                p And check back next year for details on Festival 2018.
+                h3 #{globals.ipf.date.year} Art Contest
+                p The call for artwork entries deadline has passed. Check back for details on this year's winning artwork.
 
         li.PromotionItem.alt-secondary
             section
