--- a/src/html/about/index.jade
+++ b/src/html/about/index.jade
@@ -18,7 +18,7 @@ block contents
 
     .PromotionItemSolo.u-container.u-container--noPad
         .PromotionItemSolo-header
-            h3 Festival Dates & Times:
+            h3 #{globals.ipf.date.year} Festival Dates & Times:
         .PromotionItemSolo-content
             ul
                 li 
@@ -79,7 +79,7 @@ block contents
         h3 Arts & Crafts Show and Street Market
         
         p Browse many booths on the tree-shaded streets of Inman Park from 11AM to 6PM Saturday and Sunday during festival. The <a href="/booths/arts-crafts-market">Arts & Crafts Market</a> is a juried selection of more than 150 artists showcasing their work in a variety of media including sculpture, painting and photography. The <a href="/booths/street-market">Street Market</a> includes more than 250 booths of vendors selling antiques, handcrafted wares, clothing and a large variety of other items.
-        
+
 
     ul.PromotionGrid.u-container.u-container--noPad
         li.PromotionItem.alt-primary
@@ -90,13 +90,16 @@ block contents
         
         li.PromotionItem
             section
-                h3 Festival Artwork Chosen
-                
-                p
-                    a(href="/art/2017/") Read the interview with local artist Mindy Phan.
-            
-            .ArrowNav
-                a(href="#") >
+                h3 Festival 2018 Music
+                p Check back soon to see which bands are playing Festival 2018.
+            //- section
+            //-     h3 Festival Artwork Chosen
+            //- 
+            //-     p
+            //-         a(href="/art/2017/") Read the interview with local artist Mindy Phan.
+            //- 
+            //- .ArrowNav
+            //-     a(href="#") >
 
 
         li.PromotionItem.alt-secondary
