fixed facebook embed image and meta tags

--- a/src/html/templates/layout.jade
+++ b/src/html/templates/layout.jade
@@ -17,8 +17,9 @@ html(lang="en")
         
         meta(property="og:title" content="Inman Park Festival")
         meta(property="og:description" content="Atlanta's Favorite Street Festival with a Parade, Live Bands, Dancing, Food, Drink and the always-popular Tour of Homes")
-        meta(property="og:image" content="http://inmanparkfestival.org/assets/img/")
+        meta(property="og:image" content="http://inmanparkfestival.org/assets/img/ipf-butterfly-facebook.png")
         meta(property="og:url" content="http://inmanparkfestival.org")
+        meta(property="og:type" content="website")
         meta(name="twitter:card" content="summary_large_image")
 
     body
