removed NOTES; updated license; removed email from Terms page

--- a/src/html/terms-of-use/index.jade
+++ b/src/html/terms-of-use/index.jade
@@ -26,4 +26,4 @@ block contents
 
             li <strong>Changes to Terms of Use. </strong>From time to  time, we may change the Terms of Use for this site. If we do so, we  will make those changes and update the Effective Date to show the date  of the change. We reserve the right to change these Terms of Use at any  time.
 
-            li <strong>Concerns Regarding Use of Intellectual Property.</strong> If you own intellectual property and believe it has been improperly  posted or used on this website, please notify us by sending e-mail to <a href="mailto:lburnette@rbspg.com">lburnette@rbspg.com</a>.
+            li <strong>Concerns Regarding Use of Intellectual Property.</strong> If you own intellectual property and believe it has been improperly  posted or used on this website, please notify us by sending e-mail using <a href="/contact-us">the contact form</a>.
