updated volunteer site link

--- a/src/html/volunteer/index.jade
+++ b/src/html/volunteer/index.jade
@@ -46,7 +46,7 @@ block contents
         p 
             | If you have any questions about volunteering for any duty other than beer shifts, please email
             = ' '
-            a(href="mailto:jbradshaw@kslaw.com") Jane Bradshaw.
+            a(href="mailto:jbradshaw@kslaw.com") Jane Bradshaw Burnette.
         
         
         h2 Rules for Beer Volunteers
