updated parade application; added 2018 art winner

--- a/src/assets/css/_images.scss
+++ b/src/assets/css/_images.scss
@@ -15,3 +15,10 @@
     background-size: cover;
     background-position: center;
 }
+
+.image--art-2018 {
+    background-image: url(/assets/img/2018/home-art-banner.png);
+    background-size: cover;
+    background-position: center center;
+    border: 1px solid #ddd;
+}
