--- a/src/html/art/index.jade
+++ b/src/html/art/index.jade
@@ -9,17 +9,17 @@ block contents
 
         h1 Inman Park Festival Yearly Art
 
-        p Each year a call to artists is sent out to the community to request artwork for the forthcoming festival. After receiving many submissions from local artists, the festival committee selects the winner whose art will be used in a variety of marketing materials including the Tour of Homes brochure, the website, staff t-shirts and t-shirts to be sold to festival visitors.
+        p Each year a call to artists is sent out to the community to request artwork for the forthcoming festival. After receiving many submissions from local artists, the festival committee selects the winner whose art will be used in a variety of marketing materials including the Tour of Homes brochure, the website, staff shirts and shirts for sale to the public.
         
         h2 This Year's Winner
         
         p 
             | Read about this year's winner 
             = ' '
-            a(href="/art/2017") here.
+            a(href="/art/2018") here.
         
         h2 Previous Winners
         
         ul
-            li 
-                a(href="/art/2016") 2016 - Cooper Pierce
+            li
+                a(href="/art/2017") 2017 - Ming Phan
