--- a/src/html/index.jade
+++ b/src/html/index.jade
@@ -53,12 +53,15 @@ block contents
                 p The #{globals.ipf.date.year} Inman Park Festival takes place on Saturday #{globals.ipf.date.saturday.date} &amp; Sunday #{globals.ipf.date.sunday.date} with a Tour of Homes preview on Friday #{globals.ipf.date.friday.date}.
 
     .PromotionItemHero.u-container.u-container--noPad
-        .PromotionItemHero-image.image--iris-2018
+        .PromotionItemHero-image.image--art-2018
 
         .PromotionItemHero-text
             section
-                h2 Spring is Coming!
-                p It may be cold outside but spring is on its way. Check back soon for more details on this year's festival.
+                h2 Artwork Chosen
+                p 
+                    a(href="/art/2018/") Read the interview with local artist Cooper Pierce.
+            .ArrowNav
+                a(href="/art/2018/") >
 
     ul.PromotionGrid.u-container.u-container--noPad
         li.PromotionItem.alt-primary
@@ -77,10 +80,16 @@ block contents
 
         //- Buy Tour Tickets Now
         //-
+        //- li.PromotionItem
+        //-     section
+        //-         h3 #{globals.ipf.date.year} Art Contest
+        //-         p The call for artwork entries deadline has passed. Check back for details on this year's winning artwork.
+
+
         li.PromotionItem
             section
-                h3 #{globals.ipf.date.year} Art Contest
-                p The call for artwork entries deadline has passed. Check back for details on this year's winning artwork.
+                h3 #{globals.ipf.date.year} Join the Parade
+                p If your group is interested in marching in this year's parade, <a href="#{globals.events.parade.application}">Download the Parade Application here</a>.
 
         li.PromotionItem.alt-secondary
             section
