added artist bio 2018

--- a/src/html/templates/layout.jade
+++ b/src/html/templates/layout.jade
@@ -12,6 +12,7 @@ html(lang="en")
         meta(content="width=device-width" name="viewport")
 
         link(href='https://fonts.googleapis.com/css?family=Droid+Sans+Mono|Playfair+Display:400italic' rel='stylesheet' type='text/css')
+        //- link(href="https://fonts.googleapis.com/css?family=Asap|Barlow|Muli|Open+Sans|Roboto|Rubik|Playfair+Display:400italic" rel="stylesheet")
         link(href='/assets/css/plugins.css', rel='stylesheet' type='text/css')
         link(href='/assets/css/main.css', rel='stylesheet' type='text/css')
         
