initial musician update

--- a/src/html/events/music/index.jade
+++ b/src/html/events/music/index.jade
@@ -13,27 +13,27 @@ block contents
 
         h1 Live Music at the Inman Park Festival
         
-        p See this space soon for the 2018 music lineup.
+        //- p See this space soon for the 2018 music lineup.
 
 
-    //- .u-container
-    //-     select#musicSelector.MusicSelector
-    //-         option(value="") Select Day &amp; Stage:
-    //-         optgroup(label="Saturday")
-    //-             option(value="SaturdayDelta") Delta Park
-    //-             option(value="SaturdayEuclid") Euclid Ave
-    //-             option(value="SaturdayWonderroot") WonderRoot
-    //-         optgroup(label="Sunday")
-    //-             option(value="SundayDelta") Delta Park
-    //-             option(value="SundayEuclid") Euclid Ave
-    //-             option(value="SundayWonderroot") WonderRoot
+    .u-container
+        select#musicSelector.MusicSelector
+            option(value="") Select Day &amp; Stage:
+            optgroup(label="Saturday")
+                option(value="SaturdayDelta") Delta Park
+                option(value="SaturdayEuclid") Euclid Ave
+                option(value="SaturdayFreedom") Freedom
+            optgroup(label="Sunday")
+                option(value="SundayDelta") Delta Park
+                option(value="SundayEuclid") Euclid Ave
+                option(value="SundayFreedom") Freedom
 
-    //- ul.MusicDates
-    //-     //- Saturday bands by stage
-    //-     mixin musicday("Saturday", music.stages, music.saturday)
-    //- 
-    //-     //- Sunday bands by stage
-    //-     mixin musicday("Sunday", music.stages, music.sunday)
+    ul.MusicDates
+        //- Saturday bands by stage
+        mixin musicday("Saturday", music.stages, music.saturday)
+    
+        //- Sunday bands by stage
+        mixin musicday("Sunday", music.stages, music.sunday)
 
     
 
@@ -41,18 +41,18 @@ block contents
 
 
 block scripts
-    //- script.
-    //-     var ipf = ipf || {};
-    //-     ipf.page = 'music';
-    //-     ipf.$body = $('body');
-    //-     $('#musicSelector').change(function handleMusicChange(event) {
-    //-         window.location = '#' + event.target.value;
-    //-     });
-    //-     $('.BandDetailsTrigger').click(function openBandDetails(event) {
-    //-         ipf.$body.addClass('show-band-details');
-    //-         $(event.target).next().show();
-    //-     });
-    //-     $('.BandDetails--close').click(function closeBandDetails(event) {
-    //-         ipf.$body.removeClass('show-band-details');
-    //-         $(event.target).parent().parent().hide();
-    //-     });
+    script.
+        var ipf = ipf || {};
+        ipf.page = 'music';
+        ipf.$body = $('body');
+        $('#musicSelector').change(function handleMusicChange(event) {
+            window.location = '#' + event.target.value;
+        });
+        $('.BandDetailsTrigger').click(function openBandDetails(event) {
+            ipf.$body.addClass('show-band-details');
+            $(event.target).next().show();
+        });
+        $('.BandDetails--close').click(function closeBandDetails(event) {
+            ipf.$body.removeClass('show-band-details');
+            $(event.target).parent().parent().hide();
+        });
